# 🐻‍❄️👀 sentry-eyre: Sentry integration for `eyre`.
# Copyright (c) 2023 Noel Towa <cutie@floofy.dev>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "sentry-eyre"
description = "🐻‍❄️👀 Sentry integration for `eyre`"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Noel Towa <cutie@floofy.dev>"]
repository = "https://github.com/auguwu/sentry-eyre"
# documentation = "https://docs.floofy.dev/libraries/sentry-eyre/0.1.0"

[features]
backtrace = ["dep:sentry-backtrace"]
default = ["backtrace"]

[dependencies]
eyre = "0.6.8"
sentry-backtrace = { version = "0.31.8", optional = true }
sentry-core = "0.31.8"
